First configurations and first entities

--- a/Biblioteca/appsettings.json
+++ b/Biblioteca/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Biblioteca;Integrated Security=True; Encrypt = False",
+    "DBLog": "Data Source=localhost;Initial Catalog=DbLogs;Integrated Security=True; Encrypt = False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
