--- a/Libreria.BLL/BibliotecaBLL.csproj
+++ b/Libreria.BLL/BibliotecaBLL.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IServices\" />
-    <Folder Include="Serivices\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
